[package]
name = "aori-rs"
description = "Rust SDK for Aori"
license = "MIT"
version = "0.2.5"
edition = "2021"
documentation = "https://docs.rs/aori-rs"
repository = "https://github.com/aori-io/aori-sdk-rs"
homepage = "https://aori.com"

[dependencies]
alloy = { version = "0.2.1", features = ["full"] }

anyhow = "1.0.51"

async-trait = "0.1.64"
bson = "2.7.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
eyre = "0.6.8"
futures = "0.3.18"
hex = "0.4.3"
jsonrpsee = { version = "0.24.3", features = [
    "server",
    "http-client",
    "ws-client",
    "macros",
] }
# k256 = { version = "0.13", default-features = false, features = [
#     "ecdsa",
#     "std",
# ] }
native-tls = "0.2"
nom = "7.1.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.23.1"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
tracing-loki = "0.2.4"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
url = "2.4.1"
socket2 = "0.5.5"

[dev-dependencies]
rand = "0.8.5"
